--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="name"><h2>Shahed yt</h2></div>
         <div class="work"><H3>bangladesh</H3></div>
         <div class="dec"><p>
-            Hi , My name is Shahed Hassan . I am 17 years old . I am a new Web Devloper.
+            Hi , My name is Shahed Hassan . I am 17 years old . I am a new Web Developer.
         </p></div>
         <div class="msg">
             <button class="f_b"onclick="window.location.href='https://www.facebook.com/messages/t/100064551679196';" >Message</button>
